kubernetes/apps/rook-ceph/rook-ceph/cluster/cephnfs.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nfs-test-lb
  namespace: rook-ceph
  annotations:
    io.cilium/lb-ipam-ips: 192.168.3.36
spec:
  type: LoadBalancer
  selector:
    app: rook-ceph-nfs
    ceph_nfs: nfs-test
  ports:
    - name: nfs
      port: 2049
      targetPort: 2049
      protocol: TCP
